{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 87,
  "lineage": "86304e50-3a24-fe27-7087-cb2a516d4ae0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "rising_ec2-pri1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ee4f2271a4df2d7d",
            "arn": "arn:aws:ec2:us-east-2:194729441513:instance/i-01b73e0aec90ecfbd",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01b73e0aec90ecfbd",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "rising_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-07d246ce70d75b796",
            "private_dns": "ip-10-5-1-155.us-east-2.compute.internal",
            "private_ip": "10.5.1.155",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-07a8c07e049e803d2",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0cce27c9ffa4a2e3b"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ab589be447dfe9a2",
            "tags": {
              "Name": "rising_ec2-pri1"
            },
            "tags_all": {
              "Name": "rising_ec2-pri1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0cce27c9ffa4a2e3b"
            ]
          },
          "dependencies": [
            "aws_key_pair.rising_make_keypair",
            "aws_security_group.rising-pri-SG",
            "aws_subnet.rising-pri-sub1",
            "aws_vpc.rising-vpc",
            "tls_private_key.rising_make_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "rising_ec2-pri2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ee4f2271a4df2d7d",
            "arn": "arn:aws:ec2:us-east-2:194729441513:instance/i-07a58a23364a9ff57",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07a58a23364a9ff57",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "rising_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-075204aa4e1a438f9",
            "private_dns": "ip-10-5-2-4.us-east-2.compute.internal",
            "private_ip": "10.5.2.4",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-06c25a510a3e55de8",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0cce27c9ffa4a2e3b"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-062a2ab9b80cdd0f3",
            "tags": {
              "Name": "rising_ec2-pri2"
            },
            "tags_all": {
              "Name": "rising_ec2-pri2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0cce27c9ffa4a2e3b"
            ]
          },
          "dependencies": [
            "aws_key_pair.rising_make_keypair",
            "aws_security_group.rising-pri-SG",
            "aws_subnet.rising-pri-sub2",
            "aws_vpc.rising-vpc",
            "tls_private_key.rising_make_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "rising_ec2-pub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ee4f2271a4df2d7d",
            "arn": "arn:aws:ec2:us-east-2:194729441513:instance/i-0670429a9f39dc772",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0670429a9f39dc772",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "rising_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b5a3baa3c9c3b70d",
            "private_dns": "ip-10-5-11-207.us-east-2.compute.internal",
            "private_ip": "10.5.11.207",
            "public_dns": "ec2-18-216-16-126.us-east-2.compute.amazonaws.com",
            "public_ip": "18.216.16.126",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-08ae4b89ac3098433",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0102724e123c7b3b9"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0054082666736a2df",
            "tags": {
              "Name": "rising_ec2-pub1"
            },
            "tags_all": {
              "Name": "rising_ec2-pub1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0102724e123c7b3b9"
            ]
          },
          "dependencies": [
            "aws_key_pair.rising_make_keypair",
            "aws_security_group.rising-pub-SG",
            "aws_subnet.rising-pub-sub1",
            "aws_vpc.rising-vpc",
            "tls_private_key.rising_make_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "rising_ec2-pub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ee4f2271a4df2d7d",
            "arn": "arn:aws:ec2:us-east-2:194729441513:instance/i-0cc621daa425c3284",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cc621daa425c3284",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "rising_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f7ac2c858056a0e4",
            "private_dns": "ip-10-5-12-65.us-east-2.compute.internal",
            "private_ip": "10.5.12.65",
            "public_dns": "ec2-18-116-50-134.us-east-2.compute.amazonaws.com",
            "public_ip": "18.116.50.134",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-07a44479ec33a47f4",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0102724e123c7b3b9"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ccd953c4be975954",
            "tags": {
              "Name": "rising_ec2-pub2"
            },
            "tags_all": {
              "Name": "rising_ec2-pub2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0102724e123c7b3b9"
            ]
          },
          "dependencies": [
            "aws_key_pair.rising_make_keypair",
            "aws_security_group.rising-pub-SG",
            "aws_subnet.rising-pub-sub2",
            "aws_vpc.rising-vpc",
            "tls_private_key.rising_make_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "risingIGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:194729441513:internet-gateway/igw-0ae5503574164fb2e",
            "id": "igw-0ae5503574164fb2e",
            "owner_id": "194729441513",
            "tags": {
              "Name": "rising-IGW"
            },
            "tags_all": {
              "Name": "rising-IGW"
            },
            "vpc_id": "vpc-0660e8fab64b96655"
          },
          "dependencies": [
            "aws_vpc.rising-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rising-pri-Route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:194729441513:route-table/rtb-013d353d95822f893",
            "id": "rtb-013d353d95822f893",
            "owner_id": "194729441513",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "rising-private-route"
            },
            "tags_all": {
              "Name": "rising-private-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-0660e8fab64b96655"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.rising-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rising-pub-Route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:194729441513:route-table/rtb-0f23fd30a632729e7",
            "id": "rtb-0f23fd30a632729e7",
            "owner_id": "194729441513",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ae5503574164fb2e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rising-public-route"
            },
            "tags_all": {
              "Name": "rising-public-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-0660e8fab64b96655"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.risingIGW",
            "aws_vpc.rising-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rising-pri-RTAssociation1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0da676003bc58df6e",
            "route_table_id": "rtb-013d353d95822f893",
            "subnet_id": "subnet-0ab589be447dfe9a2"
          },
          "dependencies": [
            "aws_route_table.rising-pri-Route",
            "aws_subnet.rising-pri-sub1",
            "aws_vpc.rising-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rising-pri-RTAssociation2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-088869787e85fb38c",
            "route_table_id": "rtb-013d353d95822f893",
            "subnet_id": "subnet-062a2ab9b80cdd0f3"
          },
          "dependencies": [
            "aws_route_table.rising-pri-Route",
            "aws_subnet.rising-pri-sub2",
            "aws_vpc.rising-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rising-pub-RTAssociation1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-061e5b331d121ad02",
            "route_table_id": "rtb-0f23fd30a632729e7",
            "subnet_id": "subnet-0054082666736a2df"
          },
          "dependencies": [
            "aws_internet_gateway.risingIGW",
            "aws_route_table.rising-pub-Route",
            "aws_subnet.rising-pub-sub1",
            "aws_vpc.rising-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rising-pub-RTAssociation2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03f7321850dc171ee",
            "route_table_id": "rtb-0f23fd30a632729e7",
            "subnet_id": "subnet-0ccd953c4be975954"
          },
          "dependencies": [
            "aws_internet_gateway.risingIGW",
            "aws_route_table.rising-pub-Route",
            "aws_subnet.rising-pub-sub2",
            "aws_vpc.rising-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rising-pri-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:194729441513:security-group/sg-0cce27c9ffa4a2e3b",
            "description": "rising-pri-SG",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0102724e123c7b3b9"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "id": "sg-0cce27c9ffa4a2e3b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0102724e123c7b3b9"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "rising-pri-SG",
            "name_prefix": "",
            "owner_id": "194729441513",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "rising-pri-SG"
            },
            "tags_all": {
              "Name": "rising-pri-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0660e8fab64b96655"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.rising-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rising-pub-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:194729441513:security-group/sg-0102724e123c7b3b9",
            "description": "rising -pub-SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0102724e123c7b3b9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "14.32.251.203/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "rising-pub-SG",
            "name_prefix": "",
            "owner_id": "194729441513",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "rising-pub-SG"
            },
            "tags_all": {
              "Name": "rising-pub-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0660e8fab64b96655"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.rising-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "rising-pri-SGRulesRDSegress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 3306,
            "id": "sgrule-908767041",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0cce27c9ffa4a2e3b",
            "self": false,
            "source_security_group_id": "sg-0102724e123c7b3b9",
            "to_port": 3306,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.rising-pri-SG",
            "aws_security_group.rising-pub-SG",
            "aws_vpc.rising-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "rising-pri-SGRulesRDSingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 3306,
            "id": "sgrule-81029553",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0cce27c9ffa4a2e3b",
            "self": false,
            "source_security_group_id": "sg-0102724e123c7b3b9",
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.rising-pri-SG",
            "aws_security_group.rising-pub-SG",
            "aws_vpc.rising-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "rising-pub-SGRulesALLegress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-2630018484",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0102724e123c7b3b9",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.rising-pub-SG",
            "aws_vpc.rising-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "rising-pub-SGRulesHTTPingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-2956025976",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0102724e123c7b3b9",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.rising-pub-SG",
            "aws_vpc.rising-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "rising-pub-SGRulesSSHingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "14.32.251.203/32"
            ],
            "description": "",
            "from_port": 22,
            "id": "sgrule-499729485",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0102724e123c7b3b9",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.rising-pub-SG",
            "aws_vpc.rising-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "rising-pri-sub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:194729441513:subnet/subnet-0ab589be447dfe9a2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.5.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ab589be447dfe9a2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "194729441513",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "rising-private-subnet1"
            },
            "tags_all": {
              "Name": "rising-private-subnet1"
            },
            "vpc_id": "vpc-0660e8fab64b96655"
          },
          "dependencies": [
            "aws_vpc.rising-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "rising-pri-sub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:194729441513:subnet/subnet-062a2ab9b80cdd0f3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.5.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-062a2ab9b80cdd0f3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "194729441513",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "rising-private-subnet2"
            },
            "tags_all": {
              "Name": "rising-private-subnet2"
            },
            "vpc_id": "vpc-0660e8fab64b96655"
          },
          "dependencies": [
            "aws_vpc.rising-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "rising-pub-sub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:194729441513:subnet/subnet-0054082666736a2df",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.5.11.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0054082666736a2df",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "194729441513",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "rising-public-subnet1"
            },
            "tags_all": {
              "Name": "rising-public-subnet1"
            },
            "vpc_id": "vpc-0660e8fab64b96655"
          },
          "dependencies": [
            "aws_vpc.rising-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "rising-pub-sub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:194729441513:subnet/subnet-0ccd953c4be975954",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.5.12.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ccd953c4be975954",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "194729441513",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "rising-public-subnet2"
            },
            "tags_all": {
              "Name": "rising-public-subnet2"
            },
            "vpc_id": "vpc-0660e8fab64b96655"
          },
          "dependencies": [
            "aws_vpc.rising-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "rising-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:194729441513:vpc/vpc-0660e8fab64b96655",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.5.0.0/16",
            "default_network_acl_id": "acl-06c1b18e9b17158a4",
            "default_route_table_id": "rtb-0bab8e11fa82b4c47",
            "default_security_group_id": "sg-07e6e48318a345922",
            "dhcp_options_id": "dopt-0772b700676ea6fcf",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0660e8fab64b96655",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0bab8e11fa82b4c47",
            "owner_id": "194729441513"
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}